--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=pt_BR
 APP_TIMEZONE=America/Sao_Paulo
+APP_URL=http://127.0.0.1:8000
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
